--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "ts-standard",
     "dev": "ts-node-dev src/index.ts",
-    "tsc": "tsc",
+    "build": "tsc",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
