general logic updates

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "ts-standard",
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
-    "start": "node build/index.js",
+    "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
